--- a/content/pages/rules/out-of-scope/hypervisor/219/index.adoc
+++ b/content/pages/rules/out-of-scope/hypervisor/219/index.adoc
@@ -14,5 +14,5 @@ must be done using a central management software.
 
 == References
 
-. [[r1]] link:https://www.bsimm.com/framework/deployment/software-environment.html[+BSSIM9+ SE3.5 Use orchestration
+. [[r1]] link:https://www.bsimm.com/framework/deployment/software-environment.html[BSIMM9 SE3.5 Use orchestration
 for containers and virtualized environments].
