--- a/content/pages/services/faq/index.adoc
+++ b/content/pages/services/faq/index.adoc
@@ -333,7 +333,7 @@ Frequently asked questions about Continuous Hacking.
  and the hacking process begin simultaneously.
  However, this is not always possible.
  To catch up with developers
- we perform a link:../continuous-hacking/#healthcheck[`HealthCheck`] (additional fees apply).
+ we perform a link:../../use-cases/continuous-hacking/#healthcheck[`HealthCheck`] (additional fees apply).
  This means all versions of the existing code
  are attacked up to the contracted starting point
  in addition to the monthly test limit.
