feat(doc): #2994.185 create rule 345
- Created R345 for dynamic code execution
- Added a Description
- Added ASVS and CWE references
- Fixed minor typo in R173


Former-commit-id: 44935e989d2ecb7ee191b69892be9883e28d9caa

--- a/content/pages/rules/source/173/index.adoc
+++ b/content/pages/rules/source/173/index.adoc
@@ -283,7 +283,7 @@ V5.2 Sanitization and Sandboxing Requirements.(5.2.7)]
 Verify that the application sanitizes, disables, or sandboxes user-supplied
 *SVG* scriptable content,
 especially as they relate to *XSS* resulting from inline scripts, and
-foreignObject.
+*foreignObject*.
 
 . [[r32]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.8)]
