refac(cross): #3423.1 fix-descriptions-keywords
- Meta descriptions and keywords were changed on some pages


Former-commit-id: 5e38308465604195eaeebb6978663064cf910d3e

--- a/content/pages/about-us/index.adoc
+++ b/content/pages/about-us/index.adoc
@@ -1,6 +1,6 @@
 :slug: about-us/
-:description: The purpose of the following page is to present our applicants basic information about our organization. Next, we will introduce ourselves as a company in order to enable you to make an informed decision about where you will potentially continue your career.
-:keywords: Fluid Attacks, About us, Company, Presentation, Information, Careers.
+:description: Fluid Attacks is a cybersecurity company that offers ethical hacking and pentesting products and services.
+:keywords: Fluid Attacks, About Us, Company, Ethical Hacking, Pentesting, Cybersecurity
 
 = About Us
 
