--- a/content/pages/partners/index.adoc
+++ b/content/pages/partners/index.adoc
@@ -1,7 +1,7 @@
 :slug: partners/
 :category: about-us
-:description: Fluid Attacks is a company focused on information security, ethical hacking, penetration testing and vulnerabilities detection with over 18 years providing its services to the Colombian market. The purpose of this page is to present our  business partners in the market.
-:keywords: Fluid Attacks, Partners, Pentesting, Ethical Hacking, Information Security, Company.
+:description: Our partners allow us to complete our portfolio and offer better security testing services. Get to know them and become one of them.
+:keywords: Fluid Attacks, Partners, Services, Security Testing, Software Development
 :germany: image:../images/icons/germany-flag.png[Germany Flag]
 :usa: image:../images/icons/us-flag.png[USA Flag]
 :australia: image:../images/icons/australia-flag.png[Australia Flag]
