--- a/content/pages/careers/faq/section1.adoc
+++ b/content/pages/careers/faq/section1.adoc
@@ -1,7 +1,7 @@
 :slug: careers/faq/before/
 :category: before-entering
-:description: The main goal of the following page is to inform potential talents and people interested in working with us about our selection process. Here we present a Frequently Asked Questions (FAQ) section which intends to guide our candidates through the selection process.
-:keywords: Fluid Attacks, Careers, Selection, Process, FAQ, Questions.
+:description: Here we present a Frequently Asked Questions (FAQ) section, which intends to guide our candidates through Fluid Attacks' selection process.
+:keywords: Fluid Attacks, Careers, Selection, Process, FAQ, Questions, Candidates
 :faq: yes
 
 = Before Entering
