--- a/content/pages/careers/non-technical-challenges/index.adoc
+++ b/content/pages/careers/non-technical-challenges/index.adoc
@@ -1,7 +1,7 @@
 :slug: careers/non-technical-challenges/
 :category: careers
-:description: The main goal of the following page is to inform potential talents and people interested in working with us about our selection process. The non technical challenges stage pretends to assess the candidate's ability to analyze, sort, assess and select relevant data from a raw input.
-:keywords: Fluid Attacks, Careers, Selection, Process, Non Technical Challenges, Training.
+:description: The Non-technical Challenges stage pretends to assess the candidate's ability to analyze, sort, test, and select relevant data from raw input.
+:keywords: Fluid Attacks, Careers, Selection, Process, Non-technical Challenges, Training, Test
 //:toc: yes
 
 = Non-technical Challenges
