--- a/content/pages/careers/terms/index.adoc
+++ b/content/pages/careers/terms/index.adoc
@@ -1,7 +1,7 @@
 :slug: careers/terms/
 :category: careers
-:description: This page is meant to inform everyone interested in being part of the Fluid Attacks team about the selection process. Here we present information about our company and the terms and conditions that need to be accepted if you wish to be part of the team.
-:keywords: Fluid Attacks, Careers, Process, Selection, Terms, Company.
+:description: Learn here the general terms and processes to join Fluid Attacks' team.
+:keywords: Fluid Attacks, Careers, Process, Selection, Terms, Company, Job, Terms and Conditions
 
 = Careers Terms
 
