--- a/content/pages/events/live-hacking/index.adoc
+++ b/content/pages/events/live-hacking/index.adoc
@@ -1,7 +1,7 @@
 :slug: events/live-hacking/
 :category: events
-:description: This page aims to inform the customer about the different talks offered by Fluid Attacks. The Live Hacking event is designed to show the process of finding and exploiting security vulnerabilities in web applications, explaining how the vulnerability works and how is generated from the source code.
-:keywords: Fluid Attacks, Live Hacking, Security, BWAPP, Events, Application
+:description: The Live Hacking event shows the process of finding and exploiting security vulnerabilities, explaining how they're generated from the source code.
+:keywords: Fluid Attacks, Live Hacking, Security, Event, Vulnerabilities, Source Code, Ethical Hacking
 :eventspage: yes
 
 = Live Hacking
