--- a/content/pages/events/securing-device/index.adoc
+++ b/content/pages/events/securing-device/index.adoc
@@ -1,6 +1,6 @@
 :slug: events/securing-device/
 :category: events
-:description: This page aims to inform the customer about the different talks offered by Fluid Attacks. Securing your Mobile Device conference aims to inform about the risks that smartphone users are constantly exposed and unaware of, as well as the implications and countermeasures to mitigate those risks.
+:description: Let's talk about the risks that smartphone users are constantly exposed to and unaware of, as well as what to do to mitigate them.
 :keywords: Fluid Attacks, Talks, Mobile Device, Events, Security, Smartphone
 :eventspage: yes
 
