--- a/content/pages/people/index.adoc
+++ b/content/pages/people/index.adoc
@@ -1,7 +1,7 @@
 :slug: people/
 :category: about-us
-:description: Fluid Attacks is a company focused on ethical hacking, pentesting and vulnerabilities detection in applications with over 18 year of experience providing our services to the Colombian market. The purpose of this page is to present the members that make up our work team.
-:keywords: Fluid Attacks, Team, People, Profiles, Experience, Members.
+:description: We're a pentesting company with a team of ethical hackers focused on the detection of vulnerabilities on web applications with 20 years of experience.
+:keywords: Fluid Attacks, Team, People, Profiles, Experience, Members, Ethical Hackers, Pentesting, Web Application
 
 = People
 
