--- a/content/pages/reviews/index.adoc
+++ b/content/pages/reviews/index.adoc
@@ -1,7 +1,7 @@
 :slug: reviews/
 :category: about-us
-:description: Fluid Attacks is a company focused on information security, ethical hacking, penetration testing and vulnerabilities detection in applications with over 18 years of experience in the Colombian market. In this page we present our customer reviews related to our services and products.
-:keywords: Fluid Attacks, Customers, Reviews, Services, Products, Evaluation.
+:description: Fluid Attacks has recently been recognized by Clutch as one of the Top Cybersecurity Consulting Companies in the world.
+:keywords: Fluid Attacks, Reviews, Clutch, Services, Products, Recognition, Clutch Recognition
 
 = Reviews
 
